--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,14 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'custom-cursive';
+  src: url("../fonts/cursive/austie.regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* =======================================================
 *
 * 	Template Style 
@@ -99,12 +107,13 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 .tebw-nav #tebw-logo {
-  font-size: 40px;
+  font-size: 64px;
   margin: 0;
   padding: 0;
   line-height: 40px;
-  font-family: "Sacramento", Arial, serif;
+  font-family: "custom-cursive", Arial, serif;
 }
+
 @media screen and (max-width: 768px) {
   .tebw-nav #tebw-logo {
     font-size: 20px;
@@ -338,11 +347,11 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 .tebw-cover.tebw-cover-sm {
-  height: 600px;
+  height: 135px;
 }
 @media screen and (max-width: 768px) {
   .tebw-cover.tebw-cover-sm {
-    height: 400px;
+    height: 135px;
   }
 }
 .tebw-cover.tebw-cover-sm .display-t,
@@ -857,9 +866,9 @@ form label {
 #tebw-counter .display-tc h1,
 .tebw-cover .display-tc h1 {
   margin-bottom: 0px;
-  font-size: 100px;
+  font-size: 170px;
   line-height: 1.5;
-  font-family: "Sacramento", Arial, serif;
+  font-family: "custom-cursive", Arial, serif;
 }
 @media screen and (max-width: 768px) {
   #tebw-header .display-tc h1,
@@ -1085,9 +1094,9 @@ form label {
   }
 }
 .couple-half h3 {
-  font-family: "Sacramento", Arial, serif;
+  font-family: "custom-cursive", Arial, serif;
   color: #944f5b;
-  font-size: 30px;
+  font-size: 50px;
 }
 .couple-half .groom, .couple-half .bride {
   float: left;
@@ -1202,12 +1211,11 @@ form label {
   margin-bottom: 2em;
 }
 .tebw-heading h2 {
-  font-size: 60px;
+  font-size: 90px;
   margin-bottom: 10px;
   line-height: 1.5;
-  font-weight: bold;
   color: #944f5b;
-  font-family: "Sacramento", Arial, serif;
+  font-family: "custom-cursive", Arial, serif;
 }
 @media screen and (max-width: 768px) {
   .tebw-heading h2 {
@@ -1871,13 +1879,386 @@ form label {
   opacity: 0;
 }
 
+
+/*
+
+RSVP Page
+
+*/
+
+.tebw-rsvp {
+  margin-top: 30px;
+}
+
+.tebw-rsvp h2 {
+  font-size: 70px;
+  text-align: center;
+  margin-bottom: 10px;
+  line-height: 1;
+  color: #944f5b;
+  font-family: "custom-cursive", Arial, serif;
+}
+
 #invt-id-btn {
-
+  height: 54px;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
 }
 
-.invitees .checkbox {
-  position: relative !important;
+.tebw-rsvp .second-step {
+  display: none;
 }
+
+.tebw-rsvp .add-more-message {
+  display: none;
+}
+
+
+.invitee-list .invitee-name input {
+  padding-left: 10px;
+  height: 40px;
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+
+#add-invt-btn {
+  height: 36px;
+  margin-top: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+
+
+.invitee-list .invitee-row {
+  height: 48px;
+}
+
+.toggle {
+  position: absolute;
+  left: 42px;
+  width: 10rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+@media screen and (max-width: 768px) {
+  .toggle {
+    left: 8px;
+  }
+}
+
+[type="checkbox"] {
+  display: none;
+}
+
+.check-label {
+  display: block;
+  width: 10rem;
+  height: 3.8rem;
+  border: none;
+  border-radius: 2.5rem;
+  background: #d7d7d7;
+  cursor: pointer;
+  overflow: hidden;
+}
+.check-label .face {
+  display: block;
+  position: absolute;
+  content: '';
+  top: 0.2rem;
+  bottom: 0;
+  right: 6.3rem;
+  width: 3.4rem;
+  height: 3.4rem;
+  margin: 0;
+  border: none;
+  border-radius: 1.8rem;
+  background: -webkit-linear-gradient(45deg, #dedede 0%, #fff 70%);
+  background: -o-linear-gradient(45deg, #dedede 0%, #fff 70%);
+  background: linear-gradient(45deg, #dedede 0%, #fff 70%);
+  -webkit-transition: all 0.45s ease-in-out;
+  -o-transition: all 0.45s ease-in-out;
+  transition: all 0.45s ease-in-out;
+  overflow: hidden;
+}
+[type="checkbox"] + .check-label #background {
+  width: inherit;
+  height: inherit;
+  border: none;
+  border-radius: inherit;
+  background: -webkit-gradient(linear, right top, left top, from(#f39af3), to(#68475c));
+  background: -webkit-linear-gradient(right, #f39af3, #68475c);
+  background: -o-linear-gradient(right, #f39af3, #68475c);
+  background: linear-gradient(to left, #f39af3, #68475c);
+  opacity: 0;
+  -webkit-transition: all 0.45s ease-in-out;
+  -o-transition: all 0.45s ease-in-out;
+  transition: all 0.45s ease-in-out;
+}
+[type="checkbox"]:checked + .check-label #background {
+  opacity: 1;
+}
+.face-container {
+  position: absolute;
+  width: 3.4rem;
+  height: 3.4rem;
+}
+.face {
+  -webkit-box-shadow: 0 0.3rem 0.3rem 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0.3rem 0.3rem 0 rgba(0, 0, 0, 0.25);
+}
+.eye {
+  position: absolute;
+  top: 1.6rem;
+  height: 0.25rem;
+  width: 0.625rem;
+  background: #8e8e8e;
+  border-radius: 0 0 100% 50%;
+}
+.eye.left {
+  left: 0.35rem;
+}
+.eye.right {
+  left: 1.8rem;
+}
+.mouth {
+  position: absolute;
+  top: 2.3rem;
+  left: 1.1rem;
+  width: 0.8rem;
+  height: 0.25rem;
+  background: #8e8e8e;
+  border-radius: 40% 40% 50% 50%;
+}
+[type="checkbox"]:checked + .check-label .face {
+  right: 0.2rem;
+}
+[type="checkbox"]:checked + .check-label .face .face-container {
+  -webkit-animation: rotateElement forwards 0.3s;
+  animation: rotateElement forwards 0.3s;
+}
+[type="checkbox"]:checked + .check-label .face .eye.left, [type="checkbox"]:checked + .check-label .face .eye.right {
+  -webkit-animation: changeFace forwards 0.3s 0.075s;
+  animation: changeFace forwards 0.3s 0.075s;
+}
+[type="checkbox"]:checked + .check-label .face .mouth {
+  -webkit-animation: changeMouth forwards 0.3s 0.075s;
+  animation: changeMouth forwards 0.3s 0.075s;
+}
+[type="checkbox"]:checked + .check-label .face .eye.left {
+  left: 0.5rem;
+}
+[type="checkbox"]:checked + .check-label .face .eye.right {
+  left: 1.9rem;
+}
+[type="checkbox"] + .check-label .face .face-container {
+  -webkit-animation: rotateElementReverse forwards 0.3s;
+  animation: rotateElementReverse forwards 0.3s;
+}
+[type="checkbox"] + .check-label .face .eye.left, [type="checkbox"] + .check-label .face .eye.right {
+  -webkit-animation: changeFaceReverse forwards 0.3s;
+  animation: changeFaceReverse forwards 0.3s;
+}
+[type="checkbox"] + .check-label .face .mouth {
+  -webkit-animation: changeMouthReverse forwards 0.3s;
+  animation: changeMouthReverse forwards 0.3s;
+}
+@-webkit-keyframes rotateElement {
+  0% {
+    left: 0;
+  }
+  25% {
+    left: 4rem;
+  }
+  30% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+    left: -4rem;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    left: 1rem;
+    opacity: 1;
+  }
+}
+@keyframes rotateElement {
+  0% {
+    left: 0;
+  }
+  25% {
+    left: 4rem;
+  }
+  30% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+    left: -4rem;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    left: 1rem;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes changeFace {
+  100% {
+    top: 1.3rem;
+    width: 0.275rem;
+    height: 0.275rem;
+    background: #8e8e8e;
+    border: none;
+    border-radius: 100%;
+  }
+}
+@keyframes changeFace {
+  100% {
+    top: 1.3rem;
+    width: 0.275rem;
+    height: 0.275rem;
+    background: #8e8e8e;
+    border: none;
+    border-radius: 100%;
+  }
+}
+@-webkit-keyframes changeMouth {
+  100% {
+    top: 2rem;
+    left: 0.5rem;
+    height: 0.8rem;
+    width: 1.5rem;
+    background: #8e8e8e;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#8e8e8e), to(#a4a4a4));
+    background-image: -webkit-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: -o-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: linear-gradient(to bottom, #8e8e8e, #a4a4a4);
+    border-radius: 0.2rem 0.2rem 1rem 1rem;
+  }
+}
+@keyframes changeMouth {
+  100% {
+    top: 2rem;
+    left: 0.5rem;
+    height: 0.8rem;
+    width: 1.5rem;
+    background: #8e8e8e;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#8e8e8e), to(#a4a4a4));
+    background-image: -webkit-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: -o-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: linear-gradient(to bottom, #8e8e8e, #a4a4a4);
+    border-radius: 0.2rem 0.2rem 1rem 1rem;
+  }
+}
+@-webkit-keyframes rotateElementReverse {
+  0% {
+    left: 0;
+  }
+  25% {
+    left: -4rem;
+  }
+  30% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+    left: 4rem;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    left: 0;
+    opacity: 1;
+  }
+}
+@keyframes rotateElementReverse {
+  0% {
+    left: 0;
+  }
+  25% {
+    left: -4rem;
+  }
+  30% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+    left: 4rem;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    left: 0;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes changeFaceReverse {
+  0% {
+    top: 1.7rem;
+    width: 0.375rem;
+    height: 0.375rem;
+    border: none;
+    border-radius: 100%;
+    background: #8e8e8e;
+  }
+}
+@keyframes changeFaceReverse {
+  0% {
+    top: 1.7rem;
+    width: 0.375rem;
+    height: 0.375rem;
+    border: none;
+    border-radius: 100%;
+    background: #8e8e8e;
+  }
+}
+@-webkit-keyframes changeMouthReverse {
+  0% {
+    top: 2.55rem;
+    left: 0.9rem;
+    height: 0.625rem;
+    width: 1.625rem;
+    background: #8e8e8e;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#8e8e8e), to(#a4a4a4));
+    background-image: -webkit-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: -o-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: linear-gradient(to bottom, #8e8e8e, #a4a4a4);
+    border: none;
+    border-radius: 0.2rem 0.2rem 1rem 1rem;
+  }
+  25% {
+    left: 1.125rem;
+  }
+}
+@keyframes changeMouthReverse {
+  0% {
+    top: 2.55rem;
+    left: 0.9rem;
+    height: 0.625rem;
+    width: 1.625rem;
+    background: #8e8e8e;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#8e8e8e), to(#a4a4a4));
+    background-image: -webkit-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: -o-linear-gradient(top, #8e8e8e, #a4a4a4);
+    background-image: linear-gradient(to bottom, #8e8e8e, #a4a4a4);
+    border: none;
+    border-radius: 0.2rem 0.2rem 1rem 1rem;
+  }
+  25% {
+    left: 1.125rem;
+  }
+}
+
 
 
 /*# sourceMappingURL=style.css.map */
