--- a/css/style.css
+++ b/css/style.css
@@ -667,7 +667,7 @@ h1, h2, h3, h4, h5, h6, figure {
   padding: 0;
   margin: 0 0 10px 1%;
   list-style: none;
-  min-height: 400px;
+  min-height: 300px;
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -685,7 +685,7 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 #tebw-gallery-list li a {
-  min-height: 400px;
+  min-height: 300px;
   padding: 2em;
   position: relative;
   width: 100%;
@@ -743,7 +743,9 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #tebw-gallery-list li.one-third {
   width: 32.3%;
-
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto 100%: 
 }
 
 #tebw-gallery-list li.postcards {
