add gallery to gift list

--- a/css/style.css
+++ b/css/style.css
@@ -667,10 +667,6 @@ h1, h2, h3, h4, h5, h6, figure {
   padding: 0;
   margin: 0 0 10px 1%;
   list-style: none;
-  min-height: 300px;
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
   float: left;
   clear: left;
   position: relative;
@@ -685,7 +681,6 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 #tebw-gallery-list li a {
-  min-height: 300px;
   padding: 2em;
   position: relative;
   width: 100%;
@@ -706,7 +701,6 @@ h1, h2, h3, h4, h5, h6, figure {
   -moz-border-radius: 7px;
   -ms-border-radius: 7px;
   border-radius: 7px;
-  background: rgba(0, 0, 0, 0.2);
 }
 #tebw-gallery-list li a:hover:before {
   background: rgba(0, 0, 0, 0.5);
@@ -743,18 +737,27 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #tebw-gallery-list li.one-third {
   width: 32.3%;
-  background-repeat: no-repeat !important;
-  background-position: center;
-  background-size: auto 100% !important;
+  text-align: center;
 }
 
+#tebw-gallery-list li.one-third img {
+  width: 100%;
+  margin: auto;
+  z-index: -10;
+}
 #tebw-gallery-list li.postcards {
   -webkit-filter: sepia(42%) hue-rotate(-35deg);
   box-shadow: inset 0px -100px 80px -25px rgba(0,0,0,0.8)
 }
 @media screen and (max-width: 768px) {
   #tebw-gallery-list li.one-third {
-    width: 49%;
+    width: 100%;
+  }
+
+  #tebw-gallery-list li.one-third img {
+    width: 100%;
+    margin: auto;
+    z-index: -10;
   }
 }
 @media screen and (max-width: 480px) {
